2008-11-20  Pamela Greene  <pam@chromium.org>

        Reviewed by Darin Adler.

        Test for https://bugs.webkit.org/show_bug.cgi?22370
        Add a test to check detectability of HTMLCollections.

        * fast/dom/htmlcollection-detectability-expected.txt: Added.
        * fast/dom/htmlcollection-detectability.html: Added.

2008-11-20  Pamela Greene  <pam@chromium.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=22369
        Add test cases covering more basic operations.

        * fast/js/function-dot-arguments-expected.txt:
        * fast/js/resources/function-dot-arguments.js:
        (basicTest): Added
        (lengthTest): Added

2008-11-20  Pamela Greene  <pam@chromium.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=22363
        Add a test for DOM1 and DOM2 versions of add() on a select control.

        * fast/dom/dom-add-optionelement-expected.txt: Added.
        * fast/dom/dom-add-optionelement.html: Added.

2008-11-20  Pamela Greene  <pam@chromium.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=22359
        Add test for document.write() with multiple parameters.

        * fast/dom/document_write_params-expected.txt: Added.
        * fast/dom/document_write_params.html: Added.

2008-11-20  Pamela Greene  <pam@chromium.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=22387
        Add a test for HTMLOptionsCollection indexed getter and setter.

        * fast/dom/HTMLOptionElement/collection-setter-getter-expected.txt: Added.
        * fast/dom/HTMLOptionElement/collection-setter-getter.html: Added.

2008-11-20  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Beth Dakin.
        
        <rdar://problem/2610675> Blank line that is quoted can't be deleted
        
        The old selection modification code for caret case deletions set the selection