@@ -1,0 +1,10 @@
+This test verifies that elements can be fetched by index from HTMLFormElements.
+
+On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE".
+
+
+PASS form[0] is my_input
+PASS successfullyParsed is true
+
+TEST COMPLETE
+HTMLInputElement
