@@ -1,0 +1,24 @@
+<html>
+<head>
+<link rel="stylesheet" href="../../js/resources/js-test-style.css">
+<script src="../../js/resources/js-test-pre.js"></script>
+</head>
+<body>
+<p id="description"></p>
+<div id="console"></div>
+
+<form id='f'>
+  <input type="radio" name="a" value="a" id="i">HTMLInputElement</input>
+</form>
+
+<script>
+description('This test verifies that elements can be fetched by index from HTMLFormElements.');
+
+var form = document.getElementById('f');
+var my_input = document.getElementById('i');
+shouldBe("form[0]", "my_input");
+var successfullyParsed = true;
+</script>
+<script src="../../js/resources/js-test-post.js"></script>
+</body>
+</html>
