@@ -2,6 +2,16 @@
 
         Reviewed by Darin Adler.
 
+        https://bugs.webkit.org/show_bug.cgi?id=22371
+        Add a test for accessing form element items by index.
+
+        * fast/dom/HTMLFormElement/htmlformelement-indexed-getter-expected.txt: Added.
+        * fast/dom/HTMLFormElement/htmlformelement-indexed-getter.html: Added.
+
+2008-11-20  Pamela Greene  <pam@chromium.org>
+
+        Reviewed by Darin Adler.
+
         Test for https://bugs.webkit.org/show_bug.cgi?22370
         Add a test to check detectability of HTMLCollections.
 
